@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: bind.test,v 1.10 2002/07/14 05:48:45 dgp Exp $
+# RCS: @(#) $Id: bind.test,v 1.11 2003/02/28 15:55:34 dkf Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -1563,6 +1563,13 @@ test bind-16.43 {ExpandPercents procedure} {
     event gen .b.f <ButtonRelease>
     set x
 } {422 13}
+test bind-16.44 {ExpandPercents procedure} {
+    setup
+    bind .b.f <Gravity> {set x "%R %S"}
+    set x none
+    event gen .b.f <Gravity>
+    set x
+} {?? ??}
 
 
 test bind-17.1 {event command} {
